--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=9090
 spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
+storage.path=/home/ionut_marginean/PROJECTS/BojanWorkshop/frontend-project/STORAGE/
