lots of stuff going on here

--- a/STORAGE/red/fr/main-page-config.json
+++ b/STORAGE/red/fr/main-page-config.json
@@ -12,7 +12,17 @@
       "active" : false
     },
     {
-      "url": "image.jpeg",
+      "url": "https://pbs.twimg.com/media/DXkxq31W4AYkNC7.jpg",
+      "alt": "asdf",
+      "active" : false
+    },
+    {
+      "url": "https://pbs.twimg.com/media/DXkxq31W4AYkNC7.jpg",
+      "alt": "asdf",
+      "active" : false
+    },
+    {
+      "url": "https://pbs.twimg.com/media/DXkxq31W4AYkNC7.jpg",
       "alt": "asdf",
       "active" : false
     }
